test/samples/error/err_vec_inconsistent_len.w
var x = [1,2,3]
var y = [1,2,3,4]
print(x*y)